--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,3 +4,16 @@
 
 @layer utilities {
 }
+
+::-webkit-scrollbar {
+  width: 1px; /* 세로축 스크롤바 폭 너비 */
+  height: 20px; /* 가로축 스크롤바 폭 너비 */
+}
+::-webkit-scrollbar-thumb {
+  background: gray;
+  border: 1px solid gray; /* 스크롤바 막대 테두리 설정  */
+  border-radius: 12px 12px 12px 12px;
+}
+::-webkit-scrollbar-track {
+  background: white;
+}
