--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,8 @@
+@import url("https://cdn.jsdelivr.net/npm/galmuri/dist/galmuri.css");
+* {
+  font-family: "Galmuri11", sans-serif !important;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
